loopdowhile.Poucet2.scala.error
Erreur de compilation :
Poucet2:8: error: illegal start of simple expression
  } /while
     ^Poucet2:17: error: 'while' expected but '}' found.
}
^